Исправлены события.